// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProfileOverviewComponent /> should render my user 1`] = `
<Card
  as="div"
  link={true}
  onClick={[Function]}
>
  <Image
    as="img"
    fluid={true}
    src="https://s3.amazonaws.com/uifaces/faces/twitter/madcampos/128.jpg"
    ui={true}
  />
  <CardContent>
    <CardHeader>
      alice
      <Connect(FollowButtonComponent)
        userProfile={
          Object {
            "avatarUrl": "https://s3.amazonaws.com/uifaces/faces/twitter/madcampos/128.jpg",
            "bio": "Quod architecto molestias et.",
            "followersCount": 1,
            "followingCount": 1,
            "likesCount": 2,
            "username": "alice",
          }
        }
      />
    </CardHeader>
    <CardDescription>
      Quod architecto molestias et.
    </CardDescription>
  </CardContent>
  <CardContent
    extra={true}
  >
    <Label>
      Followers
      <LabelDetail>
        1
      </LabelDetail>
    </Label>
    <Label>
      Following
      <LabelDetail>
        1
      </LabelDetail>
    </Label>
  </CardContent>
</Card>
`;

exports[`<ProfileOverviewComponent /> should render user followed by me 1`] = `
<Card
  as="div"
  link={true}
  onClick={[Function]}
>
  <Image
    as="img"
    fluid={true}
    src="https://s3.amazonaws.com/uifaces/faces/twitter/madcampos/128.jpg"
    ui={true}
  />
  <CardContent>
    <CardHeader>
      alice
      <Connect(FollowButtonComponent)
        userProfile={
          Object {
            "avatarUrl": "https://s3.amazonaws.com/uifaces/faces/twitter/madcampos/128.jpg",
            "bio": "Quod architecto molestias et.",
            "followersCount": 1,
            "followingCount": 1,
            "likesCount": 2,
            "username": "alice",
          }
        }
      />
    </CardHeader>
    <CardDescription>
      Quod architecto molestias et.
    </CardDescription>
  </CardContent>
  <CardContent
    extra={true}
  >
    <Label>
      Followers
      <LabelDetail>
        1
      </LabelDetail>
    </Label>
    <Label>
      Following
      <LabelDetail>
        1
      </LabelDetail>
    </Label>
  </CardContent>
</Card>
`;

exports[`<ProfileOverviewComponent /> should render user not followed by me 1`] = `
<Card
  as="div"
  link={true}
  onClick={[Function]}
>
  <Image
    as="img"
    fluid={true}
    src="https://s3.amazonaws.com/uifaces/faces/twitter/madcampos/128.jpg"
    ui={true}
  />
  <CardContent>
    <CardHeader>
      alice
      <Connect(FollowButtonComponent)
        userProfile={
          Object {
            "avatarUrl": "https://s3.amazonaws.com/uifaces/faces/twitter/madcampos/128.jpg",
            "bio": "Quod architecto molestias et.",
            "followersCount": 1,
            "followingCount": 1,
            "likesCount": 2,
            "username": "alice",
          }
        }
      />
    </CardHeader>
    <CardDescription>
      Quod architecto molestias et.
    </CardDescription>
  </CardContent>
  <CardContent
    extra={true}
  >
    <Label>
      Followers
      <LabelDetail>
        1
      </LabelDetail>
    </Label>
    <Label>
      Following
      <LabelDetail>
        1
      </LabelDetail>
    </Label>
  </CardContent>
</Card>
`;

exports[`<ProfileOverviewComponent /> should render without crashing 1`] = `
<Card
  as="div"
  link={true}
  onClick={[Function]}
>
  <Image
    as="img"
    fluid={true}
    src="https://robohash.org/set_set2/bgset_bg2/ppkQqaIfGqx"
    ui={true}
  />
  <CardContent>
    <CardHeader>
      alice
      <Connect(FollowButtonComponent)
        userProfile={
          Object {
            "$action": 0,
            "$meta": Object {
              "userId": "d4a093ed4e56c8c2411281d829715d9ab552c0bb762065c9ca1d96d3fd07866d",
            },
            "$rev": 1,
            "$scope": "ac431f268fc8044d6baa36eb58eab96d3efd4ef32a354e57fd04f17c52de947c",
            "$scopeId": "yWzpUT3PNNo24Pa2maCMUXdBMBVKGBKkHH",
            "$type": "userProfile",
            "address": "Wonderland",
            "avatarUrl": "https://robohash.org/set_set2/bgset_bg2/ppkQqaIfGqx",
            "name": "Alice",
            "text": "Hey, I'm Alice",
          }
        }
      />
    </CardHeader>
    <CardDescription>
      Hey, I'm Alice
    </CardDescription>
  </CardContent>
  <CardContent
    extra={true}
  >
    <Label>
      Followers
      <LabelDetail>
        1
      </LabelDetail>
    </Label>
    <Label>
      Following
      <LabelDetail>
        1
      </LabelDetail>
    </Label>
  </CardContent>
</Card>
`;

exports[`<ProfileOverviewComponent /> should render without profile 1`] = `""`;

exports[`<ProfileOverviewComponent /> should render without username 1`] = `""`;
